--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- START HOME -->
     <section  class=" half-home" id="home">
         <div class="bg-overlay"></div>
-    <!-- <section class="section bg-gradient half-home" id="home"> -->
+     <section class="section bg-gradient half-home" id="home">  
         <!-- <div class="bg-overlay"></div> -->
         <div class="home-center">
             <div class="home-desc-center">
