--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#features">Features</a>
+                        <a class="nav-link" href="#features">The Goal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#How">How</a>
+                        <a class="nav-link" href="#How">How it works </a>
                     </li>
                    
                     <li class="nav-item">
