--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sort My Site</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="Themesbrand" />
+    <meta name="description" content="Improve your webpage conversion rates with a design and usability audit in 48 hours guaranteed. Professional, actionable improvements on: design, accessibility, call-to-actions, layout and user experience." />
+    <meta name="keywords" content="Website audit, better page conversions, design audit, usability audit, page speed, accessibility " />
+    <meta name="author" content="sortmysite" />
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -114,7 +114,7 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-12">
-                    <i class="ti-ruler-pencil title-icon text-muted"></i>
+                    <i class="ti-ruler-pencil title-icon text-muted" ></i>
                     <h3 class="title"> how I can <span class="font-weight-bold">help you</span></h3>
                     <p class="text-muted mt-3 title-subtitle mx-auto">Doing a usability and design audit is one of the
                         easiest and fastest ways to increase page conversions and brand consistancy.</p>
@@ -139,7 +139,7 @@
                 <div class="col-md-4">
                     <div class="services-box">
                         <div class="services-icon">
-                            <i class="ti-thumb-up text-custom"></i>
+                            <i class="ti-thumb-up text-custom" ></i>
                         </div>
                         <div class="mt-3">
                             <h5 class="services-title font-weight-bold mb-3">Gain trust</h5>
@@ -170,7 +170,7 @@
                 <div class="col-md-4">
                     <div class="services-box">
                         <div class="services-icon">
-                            <i class="ti-support text-custom"></i>
+                            <i class="ti-support text-custom" ></i>
                         </div>
                         <div class="mt-3">
                             <h5 class="services-title font-weight-bold mb-3">Find a fix issues</h5>
@@ -185,7 +185,7 @@
                 <div class="col-md-4">
                     <div class="services-box">
                         <div class="services-icon">
-                            <i class="ti-user text-custom"></i>
+                            <i class="ti-user text-custom" ></i>
                         </div>
                         <div class="mt-3">
                             <h5 class="services-title font-weight-bold mb-3">Broaden your audience</h5>
@@ -224,7 +224,7 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-12">
-                    <i class="ti-bookmark-alt title-icon text-muted"></i>
+                    <i class="ti-bookmark-alt title-icon text-muted" ></i>
                     <h3 class="title">My <span class="font-weight-bold">Goal</span></h3>
                     <p class="text-muted mt-3 title-subtitle mx-auto">I want to increase your page conversion rates and level up your website. It's my goal to give outstanding results and topclass service. </p>
                 </div>
@@ -232,7 +232,7 @@
             <div class="row mt-5 vertical-content">
                 <div class="col-lg-6 mt-2">
                     <div>
-                        <img src="images/mockup2.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="images/mockup2.png" alt="A laptop with growing conversion rates showing" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-1 mt-2">
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-lg-6 offset-lg-1 mt-2">
                     <div>
-                        <img src="images/mockup1.png" alt="" class="img-fluid mx-auto d-block">
+                        <img src="images/mockup1.png" alt="A laptop showing responsive design and speed tests" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                 <div class="card-body">
                     <div class="row justify-content-center text-center">
                         <div class="col-lg-12">
-                            <i class="ti-ruler-pencil title-icon text-muted"></i>
+                            <i class="ti-ruler-pencil title-icon text-muted" ></i>
                             <h3 class="title"><span class="font-weight-bold">How it works</span></h3>
                              <br/>
                         </div>
@@ -278,7 +278,7 @@
     
                     <div class="hori-timeline" dir="ltr">
                         <ul class="list-inline events">
-                            <li class="list-inline-item event-list">
+                            <li class="list-inline-item event-list" >
                                 <div class="px-4">
                                     <div class="event-date bg-soft-primary text-primary">Step 1</div>
                                     <h5 class="font-size-16">Book a Discovery Call</h5>
@@ -343,7 +343,7 @@
                 <div class="col-md-4">
                     <div class="services-box">
                         <div class="services-icon">
-                            <i class="ti-bar-chart-alt text-custom"></i>
+                            <i class="ti-bar-chart-alt text-custom" ></i>
                         </div>
                         <div class="mt-3">
                             <h5 class="services-title font-weight-bold mb-3">Low click through rates</h5>
@@ -418,7 +418,7 @@
                 <div class="col-md-4">
                     <div class="services-box">
                         <div class="services-icon">
-                            <i class="ti-direction-alt text-custom"></i>
+                            <i class="ti-direction-alt text-custom" ></i>
                         </div>
                         <div class="mt-3">
                             <h5 class="services-title font-weight-bold mb-3">Numerous other reasons</h5>
@@ -550,7 +550,7 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-12">
-                    <i class="ti-heart title-icon text-muted"></i>
+                    <i class="ti-heart title-icon text-muted" ></i>
                     <h3 class="title white"> What <span class="font-weight-bold white">past Clients say</span></h3>
                     
                 </div>
@@ -565,10 +565,10 @@
                             <div class="mt-3">
                                 <p class="user-review text-center">Thank you so much for the audit. Loads of tips and actionable nuggets of advice. So many things I didn't even know I had to fix. Really insightful.</p>
                                 <div class="">
-                                    <img src="images/testi/testi-1.jpg" alt=""
+                                    <img src="images/testi/testi-1.jpg" alt="Happy client"
                                         class="rounded-circle testi-user mx-auto d-block">
                                 </div>
-                                <p class="testi-user-name text-center text-white mb-0 mt-4">-Pioter K, Globing SEO</p>
+                                <p class="testi-user-name text-center text-white mb-0 mt-4">-Pioter K, EVS digital</p>
                                 <p class="text-muted">
                                     <span class="ti-star text-warning"></span>
                                     <span class="ti-star text-warning"></span>
@@ -586,7 +586,7 @@
                             <div class="mt-3">
                                 <p class="user-review text-center">This was really helpful. I was stuck for a while but Robs advice really helped to improve my site and get my conversions moving in the right direction.</p>
                                 <div class="">
-                                    <img src="images/testi/testi-2.jpg" alt=""
+                                    <img src="images/testi/testi-2.jpg" alt=" Smilling male client"
                                         class="rounded-circle testi-user mx-auto d-block">
                                 </div>
                                 <p class="testi-user-name text-center text-white mb-0 mt-4">- John Stalker, Bedstar</p>
@@ -607,7 +607,7 @@
                             <div class="mt-3">
                                 <p class="user-review text-center">Fast, reliable and very eye opening. Worth every-penny. I would definitely recommend doing this if you're struggling with your site.</p>
                                 <div class="">
-                                    <img src="images/testi/testi-3.jpg" alt=""
+                                    <img src="images/testi/testi-3.jpg" alt="Pretty female client"
                                         class="rounded-circle testi-user mx-auto d-block">
                                 </div>
                                 <p class="testi-user-name text-center text-white mb-0 mt-4">- Mille Powell, Travel Hunter</p>
@@ -634,7 +634,7 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-12">
-                    <i class="ti-package title-icon text-muted"></i>
+                    <i class="ti-package title-icon text-muted" ></i>
                     <h3 class="title">Choose your <span class="font-weight-bold">Package</span></h3>
                     <p class="text-muted mt-3 title-subtitle mx-auto">Your audit will be completed and delivered to your
                         inbox within 48 hours of payment or your money back 100% guaranteed.</p>
