--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/colors/pink.css" id="color-opt" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TC0KS8KMQX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TC0KS8KMQX');
+</script>
+
 </head>
 
 <body>
@@ -690,7 +700,7 @@
         <div class="container">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-12">
-                    <i class="ti-headphone-alt title-icon text-muted"></i>
+                    <i class="ti-headphone-alt title-icon text-muted"g></i>
                     <h3 class="title">Lets have a <span class="font-weight-bold">Chat</span></h3>
                     <p class="text-muted mt-3 title-subtitle mx-auto">Book a free 10 minute discovery call with me to
                         discuss your website concerns, business goals and performance objectives.</p>
