--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <h5 class="services-title font-weight-bold mb-3">Find and fix issues</h5>
                             <p class="services-subtitle text-muted">Conducting a usabilty and design audit will give
                                 you a list of fixable issues to address and then a set of strategic and actionable
-                                points to implement on your site.</p>
+                                points to implement.</p>
                         </div>
                     </div>
                 </div>
@@ -385,8 +385,8 @@
                         </div>
                         <div class="mt-3">
                             <h5 class="services-title font-weight-bold mb-3">Users don't know what you do</h5>
-                            <p class="services-subtitle text-muted"> Your text or graphics tell a different story to
-                                what you are trying to say. Your colours say one thing but your brand message says something
+                            <p class="services-subtitle text-muted"> Your text or graphics tell a differentsto ry to
+                                each other. Your colours say one thing but your brand message says something
                                 else. Your font says playful but your content says serious.</p>
                         </div>
                     </div>
