--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                 <div class="px-4">
                                     <div class="event-date bg-soft-primary text-primary">Step 1</div>
                                     <h5 class="font-size-16">Book a Discovery Call</h5>
-                                    <p class="text-muted">We will have a 10 minute discovery call to go through your user personas, user goals and business goals. It's all about you and your users.</p>
+                                    <p class="text-muted">We will have a 10 minute discovery call to go through your user personas, user goals and business goals.</p>
                                      
                                 </div>
                             </li>
@@ -331,7 +331,7 @@
                                 <div class="px-4">
                                     <div class="event-date bg-soft-primary text-primary">Step 4</div>
                                     <h5 class="font-size-16">Your Results</h5>
-                                    <p class="text-muted">You will receive your results, video and solutions documetation within 48 hours or you will get 100% of your money back no questions asked.</p>
+                                    <p class="text-muted">You will receive your results, video and solutions documetation within 48 hours or you will get 100% of your money back.</p>
                                      
                                 </div>
                             </li>
