--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     <i class="ti-ruler-pencil title-icon text-muted"></i>
                     <h3 class="title">Why <span class="font-weight-bold">do a site usability and design audit?</span>
                     </h3>
-                    <p class="text-muted mt-3 title-subtitle mx-auto">Does your site have traffic but lacks click-through rates? I will help you identify issues and also give you fast, actionable ways to fix and improve your website.</p>
+                    <p class="text-muted mt-3 title-subtitle mx-auto">Does your site have traffic but lacks click-through rates? I will help you to identify issues and also give you fast, actionable ways to fix and improve your website.</p>
                 </div>
             </div>
             <div class="row mt-5">
