--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                                 <div class="px-4">
                                     <div class="event-date bg-soft-primary text-primary">Step 4</div>
                                     <h5 class="font-size-16">Your Results</h5>
-                                    <p class="text-muted">You will receive your results, video and solutions documetation within 48 hours or you will get 100% of your money back.</p>
+                                    <p class="text-muted">You will receive your results, video and solutions documetation within 48 hours or you get 100% of your money back.</p>
                                      
                                 </div>
                             </li>
