--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </nav>
 
     <!-- START HOME -->
-    <section  class=" half-home" id="home">
+    <section  class="bg home bg-home-full" id="home">
         <div class="bg-overlay"></div>
     <!-- <section class="section bg-gradient half-home" id="home"> -->
         <!-- <div class="bg-overlay"></div> -->
