--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sort My Site</title>
     <meta name="description" content="Improve your webpage conversion rates with a design and usability audit in 48 hours guaranteed. Professional, actionable improvements on: design, accessibility, call-to-actions, layout and user experience." />
-    <meta name="keywords" content="Website audit, better page conversions, design audit, usability audit, page speed, accessibility " />
+    <meta name="keywords" content="Website audits, improve your webpage page conversions, design audit, usability audit, page speed, accessibility, Website audits and desing in Cheltenham and London" />
     <meta name="author" content="sortmysite" />
 
     <link rel="shortcut icon" href="images/favicon.ico">
