--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="row justify-content-center text-center">
                 <div class="col-lg-12">
                     <i class="ti-ruler-pencil title-icon text-muted" ></i>
-                    <h3 class="title"> how I can <span class="font-weight-bold">help you</span></h3>
+                    <h3 class="title"> Services - how <span class="font-weight-bold">I can help you</span></h3>
                     <p class="text-muted mt-3 title-subtitle mx-auto">Doing a usability and design audit is one of the
                         easiest and fastest ways to increase page conversions and brand consistency.</p>
                 </div>
