--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                             <p class="mb-0"> </p>
                         </div>
                         <div>
-                            <a href="https://calendly.com/sortmysite/15-minute-meeting-clone" target="_blank" class="btn btn-custom btn-round">Book a discovery call</a>
+                            <a href="https://calendly.com/sortmysite/10min" target="_blank" class="btn btn-custom btn-round">Book a discovery call</a>
                         </div>
                     </div>
                 </div>
@@ -696,7 +696,7 @@
                             <p class="mb-0">Desktop and mobile review</p>
                         </div>
                         <div>
-                            <a href="https://calendly.com/sortmysite/15-minute-meeting-basic-package-clone" target="_blank" class="btn btn-custom btn-round">Book a discovery call</a>
+                            <a href="https://calendly.com/sortmysite/10min" target="_blank" class="btn btn-custom btn-round">Book a discovery call</a>
                         </div>
                     </div>
                 </div>
