--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </li>
                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#Why">Why</a>
+                        <a class="nav-link" href="#Why">Why do an audit</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#faq">FAQ</a>
