--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                         <a class="nav-link" href="#features">The Goal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#How">How it works </a>
+                        <a class="nav-link" href="#How">How it Works </a>
                     </li>
                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#Why">Why do an audit</a>
+                        <a class="nav-link" href="#Why">Why an Audit</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#faq">FAQ</a>
